--- a/index.html
+++ b/index.html
@@ -8,22 +8,37 @@
   
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<main>
+  <div class="card">
+    <div class="column">
+      <div class="inner">
+        <h1>Get <span class="insights">insights</span> that help your business grow.</h1>
 
-  Get insights that help your business grow.
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.</p>
+    
+        <div class="stats">
+          <div class="group">
+            <h2>10k+</h2> <h3>companies</h3>
+          </div>
+          <div class="group">
+            <h2>314</h2> <h3>templates</h3>
+          </div>
+          <div class="group">
+            <h2>12m+</h2> <h3>queries</h3>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
+    <div class="column">
+      <img src="images/image-header-desktop.jpg" alt="people working">
+    </div>
+  </div>
+</main>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
